@@ -5,6 +5,7 @@ Version 3.0.0 (v3.0 RTM)
 
 	Improvements/Changes:
 		-[Core] IConstructorVerificationBehavior merged with IConstructorVerificationBehavior  (work item 2).
+		-[Core] Container now implements IDisposable (work item 5).
 
 
 Version 2.8.1 (v2.8.1 RTM) 2015-05-05
